--- a/todo/today/todo_2022_11.md
+++ b/todo/today/todo_2022_11.md
@@ -50,7 +50,7 @@ POST                                                        CLICKS  IMPRESSIONS
 * () work on get sample alpha prototype
 
 <!-- VIDEOGROUND-BETA-WORLD -->
-* () start an animusic collection
+* () start a visualization collection that will use get sample alpha, and other various projects
 
 
 <!-------- ----------
