--- a/todo/today/todo_2022_11.md
+++ b/todo/today/todo_2022_11.md
@@ -34,6 +34,7 @@ POST                                                        CLICKS  IMPRESSIONS
 ### () - SAT 11/12/2022
 
 ### () - FRI 11/11/2022
+* () start post #1013 on threejs-examples-
 
 ### () - THU 11/10/2022
 
@@ -42,12 +43,22 @@ POST                                                        CLICKS  IMPRESSIONS
 ### () - TUE 11/08/2022
 
 ### () - MON 11/07/2022
+<!-- test_threejs -->
+* (done) finish get sample alpha prototype
+* (done) started new JSM r146 demo
+* (done) update EJS so that three.min.js is not auto loaded for r146+ demos
+* () check out threejs-grouping-mesh-objects for post folder
+
+<!-- EDIT -->
+* () eddit threejs-grouping-mesh-objects : proof read opening
+* () eddit threejs-grouping-mesh-objects : proof read getting started
+* () eddit threejs-grouping-mesh-objects : proof read section 1
 
 ### () - SUN 11/06/2022
 * (done) edit: threejs-examples-uvmap-cube-canvas-update - expand more on the module itself
 * (done) edit: threejs-examples-uvmap-cube-canvas-update - expand more on the r0 demos
 <!-- test_threejs -->
-* () work on get sample alpha prototype
+* (done) work on get sample alpha prototype
 
 <!-- VIDEOGROUND-BETA-WORLD -->
 * () start a visualization collection that will use get sample alpha, and other various projects
