--- a/todo/today/todo_2022_11.md
+++ b/todo/today/todo_2022_11.md
@@ -50,7 +50,7 @@ POST                                                        CLICKS  IMPRESSIONS
 * () check out threejs-grouping-mesh-objects for post folder
 
 <!-- EDIT -->
-* () eddit threejs-grouping-mesh-objects : proof read opening
+* (done) eddit threejs-grouping-mesh-objects : proof read opening
 * () eddit threejs-grouping-mesh-objects : proof read getting started
 * () eddit threejs-grouping-mesh-objects : proof read section 1
 
