--- a/todo/today/todo_2022_11.md
+++ b/todo/today/todo_2022_11.md
@@ -47,11 +47,12 @@ POST                                                        CLICKS  IMPRESSIONS
 * (done) finish get sample alpha prototype
 * (done) started new JSM r146 demo
 * (done) update EJS so that three.min.js is not auto loaded for r146+ demos
+
 * () check out threejs-grouping-mesh-objects for post folder
 
 <!-- EDIT -->
 * (done) eddit threejs-grouping-mesh-objects : proof read opening
-* () eddit threejs-grouping-mesh-objects : proof read getting started
+* (done) eddit threejs-grouping-mesh-objects : proof read getting started
 * () eddit threejs-grouping-mesh-objects : proof read section 1
 
 ### () - SUN 11/06/2022
