--- a/todo/today/todo_2022_11.md
+++ b/todo/today/todo_2022_11.md
@@ -48,7 +48,10 @@ POST                                                        CLICKS  IMPRESSIONS
 * (done) started new JSM r146 demo
 * (done) update EJS so that three.min.js is not auto loaded for r146+ demos
 
-* () check out threejs-grouping-mesh-objects for post folder
+* () forpost: threejs-grouping-mesh-objects get all examples working with r146
+* () forpost: threejs-grouping-mesh-objects update code examples (let, const, ect)
+* () forpost: threejs-grouping-mesh-objects rename folders to allow for more examples per section
+
 
 <!-- EDIT -->
 * (done) eddit threejs-grouping-mesh-objects : proof read opening
