--- a/todo/today/todo_2022_11.md
+++ b/todo/today/todo_2022_11.md
@@ -34,38 +34,47 @@ POST                                                        CLICKS  IMPRESSIONS
 ### () - SAT 11/12/2022
 
 ### () - FRI 11/11/2022
-* () start post #1013 on threejs-examples-
+* () start post #1013 on threejs-examples-audio-sample-alphas
 
 ### () - THU 11/10/2022
 
 ### () - WED 11/09/2022
 
 ### () - TUE 11/08/2022
+* () forpost: threejs-grouping-mesh-objects - new basic section example
+* () edit threejs-grouping-mesh-objects : write about new basic section example
+* () edit threejs-grouping-mesh-objects : proof read section 2
+
+<!-- VIDEOGROUND-BETA-WORLD -->
 
 ### () - MON 11/07/2022
-<!-- test_threejs -->
 * (done) finish get sample alpha prototype
 * (done) started new JSM r146 demo
 * (done) update EJS so that three.min.js is not auto loaded for r146+ demos
+* (done) forpost: threejs-grouping-mesh-objects get all examples working with r146
+* (done) forpost: threejs-grouping-mesh-objects update code examples (let, const, ect)
+* (done) forpost: threejs-grouping-mesh-objects rename folders to allow for more examples per section
+* (done) edit threejs-grouping-mesh-objects : proof read opening
+* (done) edit threejs-grouping-mesh-objects : proof read getting started
+* (done) edit threejs-grouping-mesh-objects : proof read section 1
 
-* () forpost: threejs-grouping-mesh-objects get all examples working with r146
-* () forpost: threejs-grouping-mesh-objects update code examples (let, const, ect)
-* () forpost: threejs-grouping-mesh-objects rename folders to allow for more examples per section
+<!-- threejs-examples-audio-sample-alphas -->
+* () start for post folder for threejs-examples-audio-sample-alphas
+* () have an r0 of the module
 
-
-<!-- EDIT -->
-* (done) eddit threejs-grouping-mesh-objects : proof read opening
-* (done) eddit threejs-grouping-mesh-objects : proof read getting started
-* () eddit threejs-grouping-mesh-objects : proof read section 1
+<!-- VIDEOGROUND-BETA-WORLD -->
+* () add r0 of threejs-examples-audio-sample-alphas
+* () start frink4 using r0 of threejs-examples-audio-sample-alphas
 
 ### () - SUN 11/06/2022
 * (done) edit: threejs-examples-uvmap-cube-canvas-update - expand more on the module itself
 * (done) edit: threejs-examples-uvmap-cube-canvas-update - expand more on the r0 demos
-<!-- test_threejs -->
 * (done) work on get sample alpha prototype
 
-<!-- VIDEOGROUND-BETA-WORLD -->
-* () start a visualization collection that will use get sample alpha, and other various projects
+
+
+
+
 
 
 <!-------- ----------
