--- a/todo/today/todo_2022_11.md
+++ b/todo/today/todo_2022_11.md
@@ -24,12 +24,19 @@ POST                                                        CLICKS  IMPRESSIONS
 ## YOUTUBE
 * () update youtube github video links from threejs-ambient-light
 
+
+<!-------- ----------
+-- WEEK 3
+---------- --------->
+ I might want to write a new post on the base loader class this week.
+ I have a new examples-electionjs project prototype that is the file manager, that could be a post
+
 <!-------- ----------
 -- WEEK 2
 ---------- --------->
 ## () - WEEK 3 - SUN 11/06/2022 - SAT 11/12/2022
- I might want to write a new post on the base loader class this week.
- I have a new examples-electionjs project prototype that is the file manager, that could be a post
+
+Looks like this week will be on my audio-sample-alphas module. Working on my file manager electionjs app a lot too, might have to write about that next week.
 
 ### () - SAT 11/12/2022
 
@@ -39,13 +46,23 @@ POST                                                        CLICKS  IMPRESSIONS
 ### () - THU 11/10/2022
 
 ### () - WED 11/09/2022
-
-### () - TUE 11/08/2022
+<!-- threejs-grouping-mesh-objects -->
+* (done) edit threejs-grouping-mesh-objects : proof read section 2
 * () forpost: threejs-grouping-mesh-objects - new basic section example
 * () edit threejs-grouping-mesh-objects : write about new basic section example
-* () edit threejs-grouping-mesh-objects : proof read section 2
 
 <!-- VIDEOGROUND-BETA-WORLD -->
+* () work on frink4
+
+<!-- threejs-examples-audio-sample-alphas -->
+
+<!-- electionjs fm proto -->
+* () delete a file
+
+### () - TUE 11/08/2022
+* (done) electionjs fm - got a lot done
+* (done) add r0 of threejs-examples-audio-sample-alphas
+* (done) start frink4 using r0 of threejs-examples-audio-sample-alphas
 
 ### () - MON 11/07/2022
 * (done) finish get sample alpha prototype
@@ -57,14 +74,8 @@ POST                                                        CLICKS  IMPRESSIONS
 * (done) edit threejs-grouping-mesh-objects : proof read opening
 * (done) edit threejs-grouping-mesh-objects : proof read getting started
 * (done) edit threejs-grouping-mesh-objects : proof read section 1
-
-<!-- threejs-examples-audio-sample-alphas -->
-* () start for post folder for threejs-examples-audio-sample-alphas
-* () have an r0 of the module
-
-<!-- VIDEOGROUND-BETA-WORLD -->
-* () add r0 of threejs-examples-audio-sample-alphas
-* () start frink4 using r0 of threejs-examples-audio-sample-alphas
+* (done) start for post folder for threejs-examples-audio-sample-alphas
+* (done) have an r0 of the module
 
 ### () - SUN 11/06/2022
 * (done) edit: threejs-examples-uvmap-cube-canvas-update - expand more on the module itself
