--- a/todo/today/todo_2022_11.md
+++ b/todo/today/todo_2022_11.md
@@ -48,6 +48,10 @@ Looks like this week will be on my audio-sample-alphas module. Working on my fil
 ### () - WED 11/09/2022
 <!-- threejs-grouping-mesh-objects -->
 * (done) edit threejs-grouping-mesh-objects : proof read section 2
+* (done) new geo rotation example
+* () write about new geo rotation example
+
+
 * () forpost: threejs-grouping-mesh-objects - new basic section example
 * () edit threejs-grouping-mesh-objects : write about new basic section example
 
