--- a/todo/today/todo_2022_11.md
+++ b/todo/today/todo_2022_11.md
@@ -41,19 +41,21 @@ Looks like this week will be on my audio-sample-alphas module. Working on my fil
 ### () - SAT 11/12/2022
 
 ### () - FRI 11/11/2022
+<!-- threejs-examples-audio-sample-alphas -->
 * () start post #1013 on threejs-examples-audio-sample-alphas
 
 ### () - THU 11/10/2022
+<!-- threejs-grouping-mesh-objects -->
+* () forpost: threejs-grouping-mesh-objects - new basic section example
+* () edit threejs-grouping-mesh-objects : write about new basic section example
+<!-- VIDEOGROUND-BLOG-POSTS -->
+* () new video2 for threejs-grouping-mesh-objects
 
 ### () - WED 11/09/2022
 <!-- threejs-grouping-mesh-objects -->
 * (done) edit threejs-grouping-mesh-objects : proof read section 2
 * (done) new geo rotation example
-* () write about new geo rotation example
-
-
-* () forpost: threejs-grouping-mesh-objects - new basic section example
-* () edit threejs-grouping-mesh-objects : write about new basic section example
+* (done) write about new geo rotation example
 
 <!-- VIDEOGROUND-BETA-WORLD -->
 * () work on frink4
