--- a/todo/today/todo_2022_11.md
+++ b/todo/today/todo_2022_11.md
@@ -63,6 +63,7 @@ Looks like this week will be on my audio-sample-alphas module. Working on my fil
 <!-- threejs-examples-audio-sample-alphas -->
 
 <!-- electionjs fm proto -->
+* (done) new item loop method that may have fixed a bug with the progress bar
 * () delete a file
 
 ### () - TUE 11/08/2022
