--- a/todo/today/todo_2022_11.md
+++ b/todo/today/todo_2022_11.md
@@ -52,18 +52,17 @@ Looks like this week will be on my audio-sample-alphas module. Working on my fil
 * () new video2 for threejs-grouping-mesh-objects
 
 ### () - WED 11/09/2022
-<!-- threejs-grouping-mesh-objects -->
 * (done) edit threejs-grouping-mesh-objects : proof read section 2
 * (done) new geo rotation example
 * (done) write about new geo rotation example
+* (done) new item loop method that may have fixed a bug with the progress bar
+<!-- threejs-examples-audio-sample-alphas -->
+* () new r0 demo in which I am using the mean of up to a given number of samples
 
 <!-- VIDEOGROUND-BETA-WORLD -->
 * () work on frink4
 
-<!-- threejs-examples-audio-sample-alphas -->
-
 <!-- electionjs fm proto -->
-* (done) new item loop method that may have fixed a bug with the progress bar
 * () delete a file
 
 ### () - TUE 11/08/2022
