--- a/todo/today/todo_2022_11.md
+++ b/todo/today/todo_2022_11.md
@@ -56,11 +56,11 @@ Looks like this week will be on my audio-sample-alphas module. Working on my fil
 * (done) new geo rotation example
 * (done) write about new geo rotation example
 * (done) new item loop method that may have fixed a bug with the progress bar
-<!-- threejs-examples-audio-sample-alphas -->
-* () new r0 demo in which I am using the mean of up to a given number of samples
+* (done) new r0 demo in which I am using the mean of up to a given number of samples
 
 <!-- VIDEOGROUND-BETA-WORLD -->
-* () work on frink4
+* (done) I want to use the new get alpha mean helper in frink4
+* () get at least somehting done with texture
 
 <!-- electionjs fm proto -->
 * () delete a file
