--- a/todo/today/todo_2022_11.md
+++ b/todo/today/todo_2022_11.md
@@ -39,17 +39,25 @@ POST                                                        CLICKS  IMPRESSIONS
 Looks like this week will be on my audio-sample-alphas module. Working on my file manager electionjs app a lot too, might have to write about that next week.
 
 ### () - SAT 11/12/2022
+<!-- electionjs fm proto -->
 
 ### () - FRI 11/11/2022
 <!-- threejs-examples-audio-sample-alphas -->
 * () start post #1013 on threejs-examples-audio-sample-alphas
 
+<!-- electionjs fm proto -->
+
 ### () - THU 11/10/2022
+* (done) electionjs fm proto delete a file
+* (done) electionjs create folders and files
+* (done) electionjs media calls for grid
 <!-- threejs-grouping-mesh-objects -->
 * () forpost: threejs-grouping-mesh-objects - new basic section example
 * () edit threejs-grouping-mesh-objects : write about new basic section example
 <!-- VIDEOGROUND-BLOG-POSTS -->
 * () new video2 for threejs-grouping-mesh-objects
+<!-- VIDEOGROUND-BETA-WORLD -->
+* () frink4 cameras
 
 ### () - WED 11/09/2022
 * (done) edit threejs-grouping-mesh-objects : proof read section 2
@@ -57,13 +65,8 @@ Looks like this week will be on my audio-sample-alphas module. Working on my fil
 * (done) write about new geo rotation example
 * (done) new item loop method that may have fixed a bug with the progress bar
 * (done) new r0 demo in which I am using the mean of up to a given number of samples
-
-<!-- VIDEOGROUND-BETA-WORLD -->
 * (done) I want to use the new get alpha mean helper in frink4
-* () get at least somehting done with texture
-
-<!-- electionjs fm proto -->
-* () delete a file
+* (done) get at least somehting done with texture
 
 ### () - TUE 11/08/2022
 * (done) electionjs fm - got a lot done
