--- a/todo/today/todo_2022_11.md
+++ b/todo/today/todo_2022_11.md
@@ -51,9 +51,8 @@ Looks like this week will be on my audio-sample-alphas module. Working on my fil
 * (done) electionjs fm proto delete a file
 * (done) electionjs create folders and files
 * (done) electionjs media calls for grid
-<!-- threejs-grouping-mesh-objects -->
-* () forpost: threejs-grouping-mesh-objects - new basic section example
-* () edit threejs-grouping-mesh-objects : write about new basic section example
+* (done) forpost: threejs-grouping-mesh-objects - new basic section example
+* (done) edit threejs-grouping-mesh-objects : write about new basic section example
 <!-- VIDEOGROUND-BLOG-POSTS -->
 * () new video2 for threejs-grouping-mesh-objects
 <!-- VIDEOGROUND-BETA-WORLD -->
