--- a/todo/today/todo_2022_11.md
+++ b/todo/today/todo_2022_11.md
@@ -43,7 +43,8 @@ Looks like this week will be on my audio-sample-alphas module. Working on my fil
 
 ### () - FRI 11/11/2022
 <!-- threejs-examples-audio-sample-alphas -->
-* () start post #1013 on threejs-examples-audio-sample-alphas
+* (done) start post #1013 on threejs-examples-audio-sample-alphas
+* () edit threejs-examples to including a link to new threejs-examples-audio-sample-alphas post
 <!-- VIDEOGROUND-BLOG-POSTS -->
 * () new video2 for threejs-grouping-mesh-objects
 <!-- VIDEOGROUND-BETA-WORLD -->
