--- a/todo/today/todo_2022_11.md
+++ b/todo/today/todo_2022_11.md
@@ -39,12 +39,14 @@ POST                                                        CLICKS  IMPRESSIONS
 Looks like this week will be on my audio-sample-alphas module. Working on my file manager electionjs app a lot too, might have to write about that next week.
 
 ### () - SAT 11/12/2022
+<!-- threejs-examples-audio-sample-alphas -->
+* () threejs-examples-audio-sample-alphas - finish writing first form of post
 <!-- electionjs fm proto -->
 
 ### () - FRI 11/11/2022
 <!-- threejs-examples-audio-sample-alphas -->
 * (done) start post #1013 on threejs-examples-audio-sample-alphas
-* () edit threejs-examples to including a link to new threejs-examples-audio-sample-alphas post
+* (done) edit threejs-examples to including a link to new threejs-examples-audio-sample-alphas post
 <!-- VIDEOGROUND-BLOG-POSTS -->
 * () new video2 for threejs-grouping-mesh-objects
 <!-- VIDEOGROUND-BETA-WORLD -->
