--- a/todo/today/todo_2022_11.md
+++ b/todo/today/todo_2022_11.md
@@ -44,13 +44,13 @@ Looks like this week will be on my audio-sample-alphas module. Working on my fil
 <!-- electionjs fm proto -->
 
 ### () - FRI 11/11/2022
-<!-- threejs-examples-audio-sample-alphas -->
 * (done) start post #1013 on threejs-examples-audio-sample-alphas
 * (done) edit threejs-examples to including a link to new threejs-examples-audio-sample-alphas post
+* (done) frink4
 <!-- VIDEOGROUND-BLOG-POSTS -->
 * () new video2 for threejs-grouping-mesh-objects
-<!-- VIDEOGROUND-BETA-WORLD -->
-* () frink4 cameras
+
+
 
 ### () - THU 11/10/2022
 * (done) electionjs fm proto delete a file
