--- a/todo/today/todo_2022_11.md
+++ b/todo/today/todo_2022_11.md
@@ -28,29 +28,39 @@ POST                                                        CLICKS  IMPRESSIONS
 <!-------- ----------
 -- WEEK 3
 ---------- --------->
+## () - WEEK 3 - SUN 11/13/2022 - SAT 11/19/2022
  I might want to write a new post on the base loader class this week.
  I have a new examples-electionjs project prototype that is the file manager, that could be a post
+
+### () - SUN 11/13/2022
+<!-- electionjs fm proto -->
+() work on making the external file system for 'actions'
+
 
 <!-------- ----------
 -- WEEK 2
 ---------- --------->
-## () - WEEK 3 - SUN 11/06/2022 - SAT 11/12/2022
+## () - WEEK 2 - SUN 11/06/2022 - SAT 11/12/2022
 
 Looks like this week will be on my audio-sample-alphas module. Working on my file manager electionjs app a lot too, might have to write about that next week.
 
 ### () - SAT 11/12/2022
-<!-- threejs-examples-audio-sample-alphas -->
-* () threejs-examples-audio-sample-alphas - finish writing first form of post
-<!-- electionjs fm proto -->
+* (done) electionjs fm prototype - using os.homedir in place of relpath linux command
+
+<!-- test threejs/edit-->
+* () threejs-ambientlight for post folder
+* () edit post with link to new for post folder
+
+<!-- test threejs/new-->
+* () new r146 prototype of glavin points project
+
+<!-- Beta World -->
+* () start a project where I just play with the guy1 model
 
 ### () - FRI 11/11/2022
 * (done) start post #1013 on threejs-examples-audio-sample-alphas
 * (done) edit threejs-examples to including a link to new threejs-examples-audio-sample-alphas post
 * (done) frink4
-<!-- VIDEOGROUND-BLOG-POSTS -->
-* () new video2 for threejs-grouping-mesh-objects
-
-
 
 ### () - THU 11/10/2022
 * (done) electionjs fm proto delete a file
