--- a/todo/today/todo_2022_11.md
+++ b/todo/today/todo_2022_11.md
@@ -33,9 +33,14 @@ POST                                                        CLICKS  IMPRESSIONS
  I have a new examples-electionjs project prototype that is the file manager, that could be a post
 
 ### () - SUN 11/13/2022
+<!-- Beta World -->
+
+<!-- test threejs/edit-->
+
+<!-- test threejs/new-->
+
 <!-- electionjs fm proto -->
 () work on making the external file system for 'actions'
-
 
 <!-------- ----------
 -- WEEK 2
@@ -46,10 +51,8 @@ Looks like this week will be on my audio-sample-alphas module. Working on my fil
 
 ### () - SAT 11/12/2022
 * (done) electionjs fm prototype - using os.homedir in place of relpath linux command
-
-<!-- test threejs/edit-->
-* () threejs-ambientlight for post folder
-* () edit post with link to new for post folder
+* (done) threejs-ambientlight for post folder
+* (done) edit post with link to new for post folder
 
 <!-- test threejs/new-->
 * () new r146 prototype of glavin points project
