--- a/todo/today/todo_2022_11.md
+++ b/todo/today/todo_2022_11.md
@@ -32,15 +32,32 @@ POST                                                        CLICKS  IMPRESSIONS
  I might want to write a new post on the base loader class this week.
  I have a new examples-electionjs project prototype that is the file manager, that could be a post
 
-### () - SUN 11/13/2022
-<!-- Beta World -->
-
+### () - SON 11/14/2022
 <!-- test threejs/edit-->
+* () materials-transparent post - 
+
+<!-- Beta World -->
 
 <!-- test threejs/new-->
 
 <!-- electionjs fm proto -->
-() work on making the external file system for 'actions'
+
+### () - SUN 11/13/2022
+* (done) new r146 prototype for a curve module
+
+<!-- Beta World -->
+* () start a project where I just play with the guy1 model
+
+<!-- test threejs/edit-->
+* () materials-transparent post - proof read intro, and getting started
+
+<!-- test threejs/new-->
+* () refine todo list for curve module prototype
+
+<!-- electionjs fm proto -->
+* () start a 'js' actions collection 
+* () pull the actions object into its own javaScript file
+* () work on win32 actions
 
 <!-------- ----------
 -- WEEK 2
@@ -53,12 +70,7 @@ Looks like this week will be on my audio-sample-alphas module. Working on my fil
 * (done) electionjs fm prototype - using os.homedir in place of relpath linux command
 * (done) threejs-ambientlight for post folder
 * (done) edit post with link to new for post folder
-
-<!-- test threejs/new-->
-* () new r146 prototype of glavin points project
-
-<!-- Beta World -->
-* () start a project where I just play with the guy1 model
+* (done) work on making the external file system for 'actions'
 
 ### () - FRI 11/11/2022
 * (done) start post #1013 on threejs-examples-audio-sample-alphas
