--- a/todo/today/todo_2022_11.md
+++ b/todo/today/todo_2022_11.md
@@ -34,7 +34,7 @@ POST                                                        CLICKS  IMPRESSIONS
 
 ### () - SON 11/14/2022
 <!-- test threejs/edit-->
-* () materials-transparent post - 
+* () materials-transparent post - work on for post folder
 
 <!-- Beta World -->
 
@@ -44,12 +44,13 @@ POST                                                        CLICKS  IMPRESSIONS
 
 ### () - SUN 11/13/2022
 * (done) new r146 prototype for a curve module
+* (done) materials-transparent post - proof read intro, and getting started
 
 <!-- Beta World -->
 * () start a project where I just play with the guy1 model
 
 <!-- test threejs/edit-->
-* () materials-transparent post - proof read intro, and getting started
+* () materials-transparent post - work on for post folder
 
 <!-- test threejs/new-->
 * () refine todo list for curve module prototype
