--- a/todo/today/todo_2022_11.md
+++ b/todo/today/todo_2022_11.md
@@ -45,12 +45,11 @@ POST                                                        CLICKS  IMPRESSIONS
 ### () - SUN 11/13/2022
 * (done) new r146 prototype for a curve module
 * (done) materials-transparent post - proof read intro, and getting started
+* (done) materials-transparent post - new transparent background example
 
 <!-- Beta World -->
+* () start the countdown video project
 * () start a project where I just play with the guy1 model
-
-<!-- test threejs/edit-->
-* () materials-transparent post - work on for post folder
 
 <!-- test threejs/new-->
 * () refine todo list for curve module prototype
