--- a/todo/today/todo_2022_11.md
+++ b/todo/today/todo_2022_11.md
@@ -46,13 +46,11 @@ POST                                                        CLICKS  IMPRESSIONS
 * (done) new r146 prototype for a curve module
 * (done) materials-transparent post - proof read intro, and getting started
 * (done) materials-transparent post - new transparent background example
+* (done) refine todo list for curve module prototype
 
 <!-- Beta World -->
 * () start the countdown video project
 * () start a project where I just play with the guy1 model
-
-<!-- test threejs/new-->
-* () refine todo list for curve module prototype
 
 <!-- electionjs fm proto -->
 * () start a 'js' actions collection 
