--- a/todo/today/todo_2022_11.md
+++ b/todo/today/todo_2022_11.md
@@ -32,30 +32,37 @@ POST                                                        CLICKS  IMPRESSIONS
  I might want to write a new post on the base loader class this week.
  I have a new examples-electionjs project prototype that is the file manager, that could be a post
 
-### () - SON 11/14/2022
+### () - SAT 11/19/2022
+
+### () - FRI 11/18/2022
+
+### () - THU 11/17/2022
+
+### () - WED 11/16/2022
+
+### () - TUE 11/15/2022
 <!-- test threejs/edit-->
-* () materials-transparent post - work on for post folder
 
 <!-- Beta World -->
 
+### () - MON 11/14/2022
+<!-- test threejs/edit-->
+* () materials-transparent post - work on for post folder
+<!-- Beta World -->
+* () start the countdown video project
+* () start a project where I just play with the guy1 model
 <!-- test threejs/new-->
-
+* () curve module r146 proto
 <!-- electionjs fm proto -->
+* () start a 'js' actions collection 
+* () pull the actions object into its own javaScript file
+* () work on win32 actions
 
 ### () - SUN 11/13/2022
 * (done) new r146 prototype for a curve module
 * (done) materials-transparent post - proof read intro, and getting started
 * (done) materials-transparent post - new transparent background example
 * (done) refine todo list for curve module prototype
-
-<!-- Beta World -->
-* () start the countdown video project
-* () start a project where I just play with the guy1 model
-
-<!-- electionjs fm proto -->
-* () start a 'js' actions collection 
-* () pull the actions object into its own javaScript file
-* () work on win32 actions
 
 <!-------- ----------
 -- WEEK 2
