--- a/todo/today/todo_2022_11.md
+++ b/todo/today/todo_2022_11.md
@@ -42,12 +42,7 @@ POST                                                        CLICKS  IMPRESSIONS
 
 ### () - TUE 11/15/2022
 <!-- test threejs/edit-->
-
-<!-- Beta World -->
-
-### () - MON 11/14/2022
-<!-- test threejs/edit-->
-* () materials-transparent post - work on for post folder
+* () materials-transparent post - 
 <!-- Beta World -->
 * () start the countdown video project
 * () start a project where I just play with the guy1 model
@@ -57,6 +52,10 @@ POST                                                        CLICKS  IMPRESSIONS
 * () start a 'js' actions collection 
 * () pull the actions object into its own javaScript file
 * () work on win32 actions
+
+### () - MON 11/14/2022
+* (done) materials-transparent post - work on for post folder
+* (done) video2 for materials-transparent
 
 ### () - SUN 11/13/2022
 * (done) new r146 prototype for a curve module
