--- a/todo/today/todo_2022_11.md
+++ b/todo/today/todo_2022_11.md
@@ -42,10 +42,12 @@ POST                                                        CLICKS  IMPRESSIONS
 
 ### () - TUE 11/15/2022
 <!-- test threejs/edit-->
-* () materials-transparent post - 
+* () edit threejs-examples-guy-one
 <!-- Beta World -->
-* () start the countdown video project
 * () start a project where I just play with the guy1 model
+* () start the countdown video project
+
+
 <!-- test threejs/new-->
 * () curve module r146 proto
 <!-- electionjs fm proto -->
