--- a/todo/today/todo_2022_11.md
+++ b/todo/today/todo_2022_11.md
@@ -42,7 +42,9 @@ POST                                                        CLICKS  IMPRESSIONS
 
 ### () - TUE 11/15/2022
 <!-- test threejs/edit-->
-* () edit threejs-examples-guy-one
+* (done) edit threejs-examples-guy-one - opening
+* (done) edit threejs-examples-guy-one - getting started section
+
 <!-- Beta World -->
 * () start a project where I just play with the guy1 model
 * () start the countdown video project
