--- a/todo/today/todo_2022_11.md
+++ b/todo/today/todo_2022_11.md
@@ -41,17 +41,16 @@ POST                                                        CLICKS  IMPRESSIONS
 ### () - WED 11/16/2022
 
 ### () - TUE 11/15/2022
-<!-- test threejs/edit-->
+<!-- test threejs/new/ edit-->
 * (done) edit threejs-examples-guy-one - opening
 * (done) edit threejs-examples-guy-one - getting started section
+* () start r1 of threejs-examples-guy-one
+* () curve module r146 proto
 
 <!-- Beta World -->
-* () start a project where I just play with the guy1 model
+* () start a project where I just play with r0 of the guy1 model
 * () start the countdown video project
 
-
-<!-- test threejs/new-->
-* () curve module r146 proto
 <!-- electionjs fm proto -->
 * () start a 'js' actions collection 
 * () pull the actions object into its own javaScript file
