--- a/todo/today/todo_2022_11.md
+++ b/todo/today/todo_2022_11.md
@@ -39,13 +39,15 @@ POST                                                        CLICKS  IMPRESSIONS
 ### () - THU 11/17/2022
 
 ### () - WED 11/16/2022
+<!-- test threejs/new/ edit-->
+* () start r1 of threejs-examples-guy-one
+* () curve module r146 proto
 
 ### () - TUE 11/15/2022
 <!-- test threejs/new/ edit-->
 * (done) edit threejs-examples-guy-one - opening
 * (done) edit threejs-examples-guy-one - getting started section
-* () start r1 of threejs-examples-guy-one
-* () curve module r146 proto
+* () new r0 demo of the module of a single guy
 
 <!-- Beta World -->
 * () start a project where I just play with r0 of the guy1 model
