--- a/todo/today/todo_2022_11.md
+++ b/todo/today/todo_2022_11.md
@@ -47,7 +47,7 @@ POST                                                        CLICKS  IMPRESSIONS
 <!-- test threejs/new/ edit-->
 * (done) edit threejs-examples-guy-one - opening
 * (done) edit threejs-examples-guy-one - getting started section
-* () new r0 demo of the module of a single guy
+* (done) new r0 demo of the module of a single guy
 
 <!-- Beta World -->
 * () start a project where I just play with r0 of the guy1 model
