--- a/todo/today/todo_2022_11.md
+++ b/todo/today/todo_2022_11.md
@@ -40,14 +40,19 @@ POST                                                        CLICKS  IMPRESSIONS
 
 ### () - WED 11/16/2022
 <!-- test threejs/new/ edit-->
-* () start r1 of threejs-examples-guy-one
+* () edit threejs-examples-guy-one - write about new demos
 * () curve module r146 proto
 
 ### () - TUE 11/15/2022
-<!-- test threejs/new/ edit-->
 * (done) edit threejs-examples-guy-one - opening
 * (done) edit threejs-examples-guy-one - getting started section
 * (done) new r0 demo of the module of a single guy
+
+<!-- videoground-blog-posts -->
+* () video2 for threejs-examples-guy-one using curvepath demo as start point
+
+<!-- test threejs/new/ edit-->
+
 
 <!-- Beta World -->
 * () start a project where I just play with r0 of the guy1 model
