--- a/todo/today/todo_2022_11.md
+++ b/todo/today/todo_2022_11.md
@@ -43,17 +43,6 @@ POST                                                        CLICKS  IMPRESSIONS
 * () edit threejs-examples-guy-one - write about new demos
 * () curve module r146 proto
 
-### () - TUE 11/15/2022
-* (done) edit threejs-examples-guy-one - opening
-* (done) edit threejs-examples-guy-one - getting started section
-* (done) new r0 demo of the module of a single guy
-
-<!-- videoground-blog-posts -->
-* () video2 for threejs-examples-guy-one using curvepath demo as start point
-
-<!-- test threejs/new/ edit-->
-
-
 <!-- Beta World -->
 * () start a project where I just play with r0 of the guy1 model
 * () start the countdown video project
@@ -62,6 +51,13 @@ POST                                                        CLICKS  IMPRESSIONS
 * () start a 'js' actions collection 
 * () pull the actions object into its own javaScript file
 * () work on win32 actions
+
+
+### () - TUE 11/15/2022
+* (done) edit threejs-examples-guy-one - opening
+* (done) edit threejs-examples-guy-one - getting started section
+* (done) new r0 demo of the module of a single guy
+* (done) video2 for threejs-examples-guy-one using curvepath demo as start point
 
 ### () - MON 11/14/2022
 * (done) materials-transparent post - work on for post folder
