--- a/todo/today/todo_2022_11.md
+++ b/todo/today/todo_2022_11.md
@@ -39,8 +39,9 @@ POST                                                        CLICKS  IMPRESSIONS
 ### () - THU 11/17/2022
 
 ### () - WED 11/16/2022
-<!-- test threejs/new/ edit-->
-* () edit threejs-examples-guy-one - write about new demos
+* (done) edit threejs-examples-guy-one - write about new demos
+<!-- test_threejs / new / edit-->
+* () threejs-examples-guy-one - new explode into trinagles demo
 * () curve module r146 proto
 
 <!-- Beta World -->
