--- a/todo/today/todo_2022_11.md
+++ b/todo/today/todo_2022_11.md
@@ -37,11 +37,13 @@ POST                                                        CLICKS  IMPRESSIONS
 ### () - FRI 11/18/2022
 
 ### () - THU 11/17/2022
+<!-- test_threejs / new / edit-->
+* () threejs-examples-guy-one - write more about explosion demo
 
 ### () - WED 11/16/2022
 * (done) edit threejs-examples-guy-one - write about new demos
+* (done) threejs-examples-guy-one - new explode into trinagles demo
 <!-- test_threejs / new / edit-->
-* () threejs-examples-guy-one - new explode into trinagles demo
 * () curve module r146 proto
 
 <!-- Beta World -->
