--- a/todo/today/todo_2022_11.md
+++ b/todo/today/todo_2022_11.md
@@ -47,6 +47,10 @@ POST                                                        CLICKS  IMPRESSIONS
 * () curve module r146 proto
 
 <!-- Beta World -->
+* (done) start a new template based on guy0, guy0 helpers, and new textures
+* () template5-guy-one-helpers : use texture images to skin head of guy model
+* () template5-guy-one-helpers : can update face of guy
+
 * () start a project where I just play with r0 of the guy1 model
 * () start the countdown video project
 
