--- a/todo/today/todo_2022_11.md
+++ b/todo/today/todo_2022_11.md
@@ -35,22 +35,18 @@ POST                                                        CLICKS  IMPRESSIONS
 ### () - SAT 11/19/2022
 
 ### () - FRI 11/18/2022
+* () start post #1014 on threejs-examples-curves-module
 
 ### () - THU 11/17/2022
 <!-- test_threejs / new / edit-->
-* () threejs-examples-guy-one - write more about explosion demo
-
-### () - WED 11/16/2022
-* (done) edit threejs-examples-guy-one - write about new demos
-* (done) threejs-examples-guy-one - new explode into trinagles demo
-<!-- test_threejs / new / edit-->
-* () curve module r146 proto
+* () edit: threejs-examples-guy-one - write more about explosion demo
+* () edit: threejs-webgl - proof read
+* () demo: curve module r146 proto
+* () forpost: start threejs-examples-curves-module for post folder
 
 <!-- Beta World -->
-* (done) start a new template based on guy0, guy0 helpers, and new textures
 * () template5-guy-one-helpers : use texture images to skin head of guy model
 * () template5-guy-one-helpers : can update face of guy
-
 * () start a project where I just play with r0 of the guy1 model
 * () start the countdown video project
 
@@ -59,6 +55,10 @@ POST                                                        CLICKS  IMPRESSIONS
 * () pull the actions object into its own javaScript file
 * () work on win32 actions
 
+### () - WED 11/16/2022
+* (done) edit threejs-examples-guy-one - write about new demos
+* (done) threejs-examples-guy-one - new explode into trinagles demo
+* (done) start a new template based on guy0, guy0 helpers, and new textures
 
 ### () - TUE 11/15/2022
 * (done) edit threejs-examples-guy-one - opening
