--- a/todo/today/todo_2022_11.md
+++ b/todo/today/todo_2022_11.md
@@ -39,8 +39,9 @@ POST                                                        CLICKS  IMPRESSIONS
 
 ### () - THU 11/17/2022
 <!-- test_threejs / new / edit-->
-* () edit: threejs-examples-guy-one - write more about explosion demo
-* () edit: threejs-webgl - proof read
+* (done) edit: threejs-examples-guy-one - write more about explosion demo
+* (done) edit: threejs-webgl - for post folder, new demos
+
 * () demo: curve module r146 proto
 * () forpost: start threejs-examples-curves-module for post folder
 
