--- a/todo/today/todo_2022_11.md
+++ b/todo/today/todo_2022_11.md
@@ -38,13 +38,12 @@ POST                                                        CLICKS  IMPRESSIONS
 * () start post #1014 on threejs-examples-curves-module
 
 ### () - THU 11/17/2022
-<!-- test_threejs / new / edit-->
 * (done) edit: threejs-examples-guy-one - write more about explosion demo
 * (done) edit: threejs-webgl - for post folder, new demos
-
-* () demo: curve module r146 proto
-* () forpost: start threejs-examples-curves-module for post folder
-
+* (done) demo: curve module r146 proto
+* (done) forpost: start threejs-examples-curves-module for post folder
+<!-- test_threejs / new / edit-->
+* () forpost: start threejs-examples-curves-module : get alpha method
 <!-- Beta World -->
 * () template5-guy-one-helpers : use texture images to skin head of guy model
 * () template5-guy-one-helpers : can update face of guy
