--- a/todo/today/todo_2022_11.md
+++ b/todo/today/todo_2022_11.md
@@ -42,8 +42,9 @@ POST                                                        CLICKS  IMPRESSIONS
 * (done) edit: threejs-webgl - for post folder, new demos
 * (done) demo: curve module r146 proto
 * (done) forpost: start threejs-examples-curves-module for post folder
+* (done) forpost: start threejs-examples-curves-module : get alpha method
 <!-- test_threejs / new / edit-->
-* () forpost: start threejs-examples-curves-module : get alpha method
+
 <!-- Beta World -->
 * () template5-guy-one-helpers : use texture images to skin head of guy model
 * () template5-guy-one-helpers : can update face of guy
