--- a/todo/today/todo_2022_11.md
+++ b/todo/today/todo_2022_11.md
@@ -36,7 +36,20 @@ POST                                                        CLICKS  IMPRESSIONS
 
 ### () - FRI 11/18/2022
 <!-- test_threejs / new / edit-->
-* () start post #1014 on threejs-examples-curves-module
+* (done) start post #1014 on threejs-examples-curves-module
+* () start r0 section
+* () write at least something about each demo
+* () write conclusion
+* () write what to know first section
+
+
+
+* (done) edit threejs-examples to include link to new example post
+* () link to new threejs-examples-curves-module from object3d-position post
+* () link to new threejs-examples-curves-module from threejs-buffer-geometry-attributes-position
+* () link to new threejs-examples-curves-module from threejs-grouping-mesh-objects
+* () link to new threejs-examples-curves-module from curve posts
+
 <!-- Beta World -->
 * () template5-guy-one-helpers : use texture images to skin head of guy model
 * () template5-guy-one-helpers : can update face of guy
