--- a/todo/today/todo_2022_11.md
+++ b/todo/today/todo_2022_11.md
@@ -33,22 +33,21 @@ POST                                                        CLICKS  IMPRESSIONS
  I have a new examples-electionjs project prototype that is the file manager, that could be a post
 
 ### () - SAT 11/19/2022
-
-### () - FRI 11/18/2022
 <!-- test_threejs / new / edit-->
-* (done) start post #1014 on threejs-examples-curves-module
-* () start r0 section
-* () write at least something about each demo
-* () write conclusion
-* () write what to know first section
-
-
-
-* (done) edit threejs-examples to include link to new example post
-* () link to new threejs-examples-curves-module from object3d-position post
 * () link to new threejs-examples-curves-module from threejs-buffer-geometry-attributes-position
 * () link to new threejs-examples-curves-module from threejs-grouping-mesh-objects
 * () link to new threejs-examples-curves-module from curve posts
+
+### () - FRI 11/18/2022
+* (done) start post #1014 on threejs-examples-curves-module
+* (done) start r0 section
+* (done) write at least something about each demo
+* (done) write conclusion
+* (done) write what to know first section
+* (done) edit threejs-examples to include link to new example post
+* (done) link to new threejs-examples-curves-module from object3d-position post
+* () edit: threejs-examples-curves-module - write more on the r0 module
+<!-- test_threejs / new / edit-->
 
 <!-- Beta World -->
 * () template5-guy-one-helpers : use texture images to skin head of guy model
