--- a/todo/today/todo_2022_11.md
+++ b/todo/today/todo_2022_11.md
@@ -46,9 +46,7 @@ POST                                                        CLICKS  IMPRESSIONS
 * (done) write what to know first section
 * (done) edit threejs-examples to include link to new example post
 * (done) link to new threejs-examples-curves-module from object3d-position post
-* () edit: threejs-examples-curves-module - write more on the r0 module
-<!-- test_threejs / new / edit-->
-
+* (done) edit: threejs-examples-curves-module - write more on the r0 module
 <!-- Beta World -->
 * () template5-guy-one-helpers : use texture images to skin head of guy model
 * () template5-guy-one-helpers : can update face of guy
