--- a/todo/today/todo_2022_11.md
+++ b/todo/today/todo_2022_11.md
@@ -33,11 +33,13 @@ POST                                                        CLICKS  IMPRESSIONS
  I have a new examples-electionjs project prototype that is the file manager, that could be a post
 
 ### () - SAT 11/19/2022
+* (done) template5-guy-one-helpers : use texture images to skin head of guy model
+* (done) template5-guy-one-helpers : can update face of guy
 <!-- Beta World -->
-* () template5-guy-one-helpers : use texture images to skin head of guy model
-* () template5-guy-one-helpers : can update face of guy
-* () start a project where I just play with r0 of the guy1 model
-* () start the countdown video project
+* () template5: use curve module
+* () template5: DAE File for addtional scene objects for guy videos
+* () template5: make sample alphas part of the stack
+* () start first guy video
 <!-- electionjs fm proto -->
 * () start a 'js' actions collection 
 * () pull the actions object into its own javaScript file
