--- a/todo/today/todo_2022_11.md
+++ b/todo/today/todo_2022_11.md
@@ -26,18 +26,19 @@ POST                                                        CLICKS  IMPRESSIONS
 
 
 <!-------- ----------
--- WEEK 3
+-- WEEK 4
 ---------- --------->
-## () - WEEK 3 - SUN 11/13/2022 - SAT 11/19/2022
- I might want to write a new post on the base loader class this week.
- I have a new examples-electionjs project prototype that is the file manager, that could be a post
+## () - WEEK 4 - SUN 11/10/2022 - SAT 11/26/2022
 
-### () - SAT 11/19/2022
-* (done) template5-guy-one-helpers : use texture images to skin head of guy model
-* (done) template5-guy-one-helpers : can update face of guy
+Not going to get much done this week. Just do a little editing and working on video templates. new post this week can be on my file manager electionjs app that I all ready have together.
+
+### () - FRI 11/25/2022
+* () start post #1015 on threejs-electronjs-examples-file-manager
+
+### () - MON 11/21/2022
+<!-- edit/new -->
+* () edit threejs- - proof read
 <!-- Beta World -->
-* () template5: use curve module
-* () template5: DAE File for addtional scene objects for guy videos
 * () template5: make sample alphas part of the stack
 * () start first guy video
 <!-- electionjs fm proto -->
@@ -48,6 +49,22 @@ POST                                                        CLICKS  IMPRESSIONS
 * () link to new threejs-examples-curves-module from threejs-buffer-geometry-attributes-position
 * () link to new threejs-examples-curves-module from threejs-grouping-mesh-objects
 * () link to new threejs-examples-curves-module from curve posts
+
+### () - SUN 11/20/2022
+<!-- Beta World -->
+* (done) template5: use curve module
+* (done) template5: DAE File for additional scene objects for guy videos
+
+<!-------- ----------
+-- WEEK 3
+---------- --------->
+## () - WEEK 3 - SUN 11/13/2022 - SAT 11/19/2022
+ I might want to write a new post on the base loader class this week.
+ I have a new examples-electionjs project prototype that is the file manager, that could be a post
+
+### () - SAT 11/19/2022
+* (done) template5-guy-one-helpers : use texture images to skin head of guy model
+* (done) template5-guy-one-helpers : can update face of guy
 
 ### () - FRI 11/18/2022
 * (done) start post #1014 on threejs-examples-curves-module
