--- a/todo/today/todo_2022_11.md
+++ b/todo/today/todo_2022_11.md
@@ -35,9 +35,17 @@ Not going to get much done this week. Just do a little editing and working on vi
 ### () - FRI 11/25/2022
 * () start post #1015 on threejs-electronjs-examples-file-manager
 
+### () - TUE 11/22/2022
+<!-- edit/new -->
+* () edit: threejs-examples-menus - proof read
+* () edit: threejs-fog - proof read
+
 ### () - MON 11/21/2022
 <!-- edit/new -->
-* () edit threejs- - proof read
+* () edit: threejs-object3d-get-by-name - proof read
+* () edit: threejs-fog - proof read
+
+
 <!-- Beta World -->
 * () template5: make sample alphas part of the stack
 * () start first guy video
