--- a/todo/today/todo_2022_11.md
+++ b/todo/today/todo_2022_11.md
@@ -42,7 +42,9 @@ Not going to get much done this week. Just do a little editing and working on vi
 
 ### () - MON 11/21/2022
 <!-- edit/new -->
-* () edit: threejs-object3d-get-by-name - proof read
+* (done) edit: threejs-object3d-get-by-name - proof read
+* () edit: threejs-object3d-get-by-name - for post folder
+
 * () edit: threejs-fog - proof read
 
 
