--- a/todo/today/todo_2022_11.md
+++ b/todo/today/todo_2022_11.md
@@ -38,15 +38,7 @@ Not going to get much done this week. Just do a little editing and working on vi
 ### () - TUE 11/22/2022
 <!-- edit/new -->
 * () edit: threejs-examples-menus - proof read
-* () edit: threejs-fog - proof read
-
-### () - MON 11/21/2022
-<!-- edit/new -->
-* (done) edit: threejs-object3d-get-by-name - proof read
-* (done) edit: threejs-object3d-get-by-name - for post folder
-* () edit: threejs-fog - proof read intro
-
-
+* () edit: threejs-fog - proof read section1
 <!-- Beta World -->
 * () template5: make sample alphas part of the stack
 * () start first guy video
@@ -58,6 +50,12 @@ Not going to get much done this week. Just do a little editing and working on vi
 * () link to new threejs-examples-curves-module from threejs-buffer-geometry-attributes-position
 * () link to new threejs-examples-curves-module from threejs-grouping-mesh-objects
 * () link to new threejs-examples-curves-module from curve posts
+
+### () - MON 11/21/2022
+<!-- edit/new -->
+* (done) edit: threejs-object3d-get-by-name - proof read
+* (done) edit: threejs-object3d-get-by-name - for post folder
+* (done) edit: threejs-fog - proof read intro
 
 ### () - SUN 11/20/2022
 <!-- Beta World -->
