--- a/todo/today/todo_2022_11.md
+++ b/todo/today/todo_2022_11.md
@@ -32,8 +32,14 @@ POST                                                        CLICKS  IMPRESSIONS
 
 Not going to get much done this week. Just do a little editing and working on video templates. new post this week can be on my file manager electionjs app that I all ready have together.
 
+### () - SAT 11/26/2022
+
 ### () - FRI 11/25/2022
 * () start post #1015 on threejs-electronjs-examples-file-manager
+
+### () - THU 11/24/2022
+
+### () - WED 11/23/2022
 
 ### () - TUE 11/22/2022
 <!-- edit/new -->
