--- a/todo/today/todo_2022_11.md
+++ b/todo/today/todo_2022_11.md
@@ -43,7 +43,12 @@ Not going to get much done this week. Just do a little editing and working on vi
 
 ### () - TUE 11/22/2022
 <!-- edit/new -->
-* () edit: threejs-examples-menus - proof read
+* (done) edit: threejs-examples-menus - proof read opening
+* () edit: threejs-examples-menus - proof read/expand intro
+* () edit: threejs-examples-menus - proof read section 1
+* () edit: threejs-examples-menus - proof read conclusion
+
+
 * () edit: threejs-fog - proof read section1
 <!-- Beta World -->
 * () template5: make sample alphas part of the stack
