--- a/todo/today/todo_2022_11.md
+++ b/todo/today/todo_2022_11.md
@@ -44,9 +44,12 @@ Not going to get much done this week. Just do a little editing and working on vi
 ### () - TUE 11/22/2022
 <!-- edit/new -->
 * (done) edit: threejs-examples-menus - proof read opening
-* () edit: threejs-examples-menus - proof read/expand intro
-* () edit: threejs-examples-menus - proof read section 1
-* () edit: threejs-examples-menus - proof read conclusion
+* (done) edit: threejs-examples-menus - proof read/expand intro
+* (done) edit: threejs-examples-menus - proof read conclusion
+
+* () forpost: threejs-examples-menus - new module form of example
+* () forpost: threejs-examples-menus - more than one demo of module
+* () edit: threejs-examples-menus - update section 1
 
 
 * () edit: threejs-fog - proof read section1
