--- a/todo/today/todo_2022_11.md
+++ b/todo/today/todo_2022_11.md
@@ -42,16 +42,13 @@ Not going to get much done this week. Just do a little editing and working on vi
 ### () - WED 11/23/2022
 
 ### () - TUE 11/22/2022
-<!-- edit/new -->
 * (done) edit: threejs-examples-menus - proof read opening
 * (done) edit: threejs-examples-menus - proof read/expand intro
 * (done) edit: threejs-examples-menus - proof read conclusion
-
-* () forpost: threejs-examples-menus - new module form of example
+* (done) forpost: threejs-examples-menus - new module form of example
+* (done) edit: threejs-examples-menus - update section 1
+<!-- edit/new -->
 * () forpost: threejs-examples-menus - more than one demo of module
-* () edit: threejs-examples-menus - update section 1
-
-
 * () edit: threejs-fog - proof read section1
 <!-- Beta World -->
 * () template5: make sample alphas part of the stack
