--- a/todo/today/todo_2022_11.md
+++ b/todo/today/todo_2022_11.md
@@ -38,18 +38,17 @@ Not going to get much done this week. Just do a little editing and working on vi
 * () start post #1015 on threejs-electronjs-examples-file-manager
 
 ### () - THU 11/24/2022
+<!-- edit/new -->
+* () edit: threejs-object3d-position - proof read #2 parent child
+* () edit: threejs-object3d-position - proof read #3 Curves
+* () edit: threejs-object3d-position - proof read #4 Determ
 
 ### () - WED 11/23/2022
-
-### () - TUE 11/22/2022
-* (done) edit: threejs-examples-menus - proof read opening
-* (done) edit: threejs-examples-menus - proof read/expand intro
-* (done) edit: threejs-examples-menus - proof read conclusion
-* (done) forpost: threejs-examples-menus - new module form of example
-* (done) edit: threejs-examples-menus - update section 1
 <!-- edit/new -->
-* () forpost: threejs-examples-menus - more than one demo of module
+* (done) edit: threejs-object3d-position - proof read opening, getting started, #1
 * () edit: threejs-fog - proof read section1
+
+* () forpost: threejs-examples-menus - more than one demo of module
 <!-- Beta World -->
 * () template5: make sample alphas part of the stack
 * () start first guy video
@@ -61,6 +60,13 @@ Not going to get much done this week. Just do a little editing and working on vi
 * () link to new threejs-examples-curves-module from threejs-buffer-geometry-attributes-position
 * () link to new threejs-examples-curves-module from threejs-grouping-mesh-objects
 * () link to new threejs-examples-curves-module from curve posts
+
+### () - TUE 11/22/2022
+* (done) edit: threejs-examples-menus - proof read opening
+* (done) edit: threejs-examples-menus - proof read/expand intro
+* (done) edit: threejs-examples-menus - proof read conclusion
+* (done) forpost: threejs-examples-menus - new module form of example
+* (done) edit: threejs-examples-menus - update section 1
 
 ### () - MON 11/21/2022
 <!-- edit/new -->
